2001-04-24   Nicola Pero  <n.pero@mi.flashnet.it>

	* Testing/benchmark.m (bench_object): Use a choice of the 10 more
	used classes when benchmarking class method invocation, rather
	than always using `NSObject'.  Added bench for NSClassFromString.

2001-04-23  Nicola Pero  <nicola@brainstorm.co.uk>

	* Source/GSValue.m ([-getValue:]): Fixed typo - was raising
	exception on non-NULL buffer rather than NULL.

2001-04-23  Nicola Pero  <nicola@brainstorm.co.uk>

	* Source/NSBundle.m ([+initialize]): Fixed segmentation fault when
	NSSearchPathForDirectoriesInDomains returns an empty array.  This
	used to appear when GNUSTEP_SYSTEM_ROOT was unset.
	* Source/NSUser.m (NSSearchPathForDirectoriesInDomains): Read
	GNUSTEP_SYSTEM_ROOT, GNUSTEP_LOCAL_ROOT, GNUSTEP_NETWORK_ROOT and
	GNUSTEP_USER_ROOT only once, then cache them.  Do not crash if
	some of them are nil.  If GNUSTEP_SYSTEM_ROOT is nil, fprintf a
	log message, and try using /usr/GNUstep/System.  Use new ADD_PATH
	macro to simplify code.  Autorelease returned array which was
	previously leaked.

2001-04-22  Georg Fleischmann

	* Source/GSAttributedString.m:
	([replaceCharactersInRange:withString:])
	recalculate effective range after removing attributes.

2001-04-23  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSLocale.m: Only call setlocale() in GSSetLocaleC()
	* Source/NSObject.m: ([+initialize]) call GSSetLocaleC() after other
	initialisation, to try to ensure that locale stuff is set up early
	before any attempt is made to use locale dependent code.
	* Source/NSString.m: ([-stringByExpandingTildeInPath:]) fix suggested
	by David Wetzel.
	* Source/GSValue.m: Fix abort when initialising value with illegal
	type.  Also fix all other uses of objc_sizeof_type(), add some checks
	to conform to documentation, and some optimisations.

2001-04-22  Nicola Pero  <n.pero@mi.flashnet.it>

	* Testing/benchmark.m: Modified messages to give a better idea of
	the order of magnitudes involved; added benchmarks for